Fixed hero text overlapping with menu bar text

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ img {
 #navBar {
     position: fixed;
     width: 100%;
+    z-index: 3;
 }
 
 nav ul {
